broken down into small components

--- a/src/comonents/Profile/Profile.module.css
+++ b/src/comonents/Profile/Profile.module.css
@@ -1,12 +1,7 @@
 .content {
     grid-area: content;
-    background-color: blueviolet;
+    background-color: brown;
 }
 
-.item {
-color: green;
-}
 
-.item {
-    color : aquamarine;
-}
+
