--- a/src/App.css
+++ b/src/App.css
@@ -3,31 +3,25 @@
     display: grid;
     width: 1200px;
     grid-template-rows: 60px 1fr;
-    grid-template-columns:2fr 10fr ;
+    grid-template-columns:2fr 10fr;
     grid-template-areas:
     'header header'
     'nav content'
     /*grid-gap: 10px;*/
 }
 
-
-.header {
-    grid-area: header;
-    background-color: green;
-}
-
-.header img {
-    width: 20px;
-}
-
-.nav {
-    grid-area: nav;
-    background-color: yellow;
-}
-
-
-.content {
+.app-wrapper-content {
     grid-area: content;
-    background-color: red;
+    background-color: brown;
 }
+
+
+
+
+
+
+
+
+
+
 
