--- a/src/comonents/Dialogs/Dialogs.module.css
+++ b/src/comonents/Dialogs/Dialogs.module.css
@@ -4,15 +4,20 @@
 }
 
 .dialogsList {
-    padding: 10px;
+    padding: 5px;
 }
 
-.dialogsList .active {
-    color: gold;
+.dialogsList a.active {
+    color:burlywood;
+}
+
+.color{
+    color: white;
 }
 
 .messages {
-padding: 10px;
+    padding: 5px;
+    color: white;
 }
 
 .message {
