--- a/src/comonents/Header/Header.module.css
+++ b/src/comonents/Header/Header.module.css
@@ -3,6 +3,14 @@
     background-color: green;
 }
 
-.header>img {
+.header > img {
     width: 20px;
+}
+
+.loginBlock {
+    float: right;
+}
+
+.loginBlock a {
+    color: white;
 }
