Added an error message for invalid data and style

--- a/src/common/FormsControls/FormsControls.module.css
+++ b/src/common/FormsControls/FormsControls.module.css
@@ -9,3 +9,8 @@
 .formControls.error span {
     color : red;
 }
+.formSummaryError {
+    border: 1px solid red;
+    padding: 5px;
+    color: #f10c0c;
+}
